@@ -47,6 +47,9 @@ BUGFIXES:
   ZOOKEEPER-2211: PurgeTxnLog does not correctly purge when snapshots and
   logs are at different locations (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2227: stmk four-letter word fails execution at server while
+  reading trace mask argument (Chris Nauroth via rgs)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
